Update bg for parentpay projects

--- a/fireRegister.html
+++ b/fireRegister.html
@@ -55,7 +55,7 @@
             <div class="container ">
                 <div class="col-md-12" style="background:black;;margin-left:20px;">
                     <div class="banner_content col-md-12">
-                        <img style="margin:150px;margin-bottom: 50px; max-width: 100%;" src="img/fire.png">
+                        <img style="margin:150px;margin-bottom: 50px; max-width: 100%;" src="img/SIMS.webp">
                     </div>
                     <div class="banner_content text-center" class="col-md-12">
                         <h2 class=" col-md-12">Fire Register</h2>
