--- a/takeRegister.html
+++ b/takeRegister.html
@@ -55,7 +55,7 @@
             <div class="container ">
                 <div class="col-md-12" style="background:black;;margin-left:20px;">
                     <div class="banner_content col-md-12">
-                        <img style="margin-top:30px;max-width: 100%;" src="img/SIMS.webp">
+                        <img style="margin-top:100px;margin-left: 50px; max-width: 100%;" src="img/SIMS.webp">
                     </div>
                     <div class="banner_content text-center" class="col-md-12">
                         <h2 class="col-md-12">SIMS NextGen -Take Register</h2>
